--- a/releases.json
+++ b/releases.json
@@ -1,5 +1,13 @@
 [
     {
+        "version": "1.1.6",
+        "downloadUrl": "https://github.com/am-impact/amcommand/archive/master.zip",
+        "date": "2016-04-19T10:00:00+01:00",
+        "notes": [
+            "[Added] Added functionality to set return commands through plugins."
+        ]
+    },
+    {
         "version": "1.1.5",
         "downloadUrl": "https://github.com/am-impact/amcommand/archive/master.zip",
         "date": "2016-04-18T10:00:00+01:00",
