--- a/releases.json
+++ b/releases.json
@@ -1,5 +1,14 @@
 [
     {
+        "version": "1.1.7",
+        "downloadUrl": "https://github.com/am-impact/amcommand/archive/master.zip",
+        "date": "2016-05-02T10:00:00+01:00",
+        "notes": [
+            "[Added] Added functionality to set a return title through plugins.",
+            "[Fixed] Restoring to actions when pressing ESC in a sub command / action."
+        ]
+    },
+    {
         "version": "1.1.6",
         "downloadUrl": "https://github.com/am-impact/amcommand/archive/master.zip",
         "date": "2016-04-19T10:00:00+01:00",
