--- a/releases.json
+++ b/releases.json
@@ -1,5 +1,13 @@
 [
     {
+        "version": "1.2.0",
+        "downloadUrl": "https://github.com/am-impact/amcommand/archive/master.zip",
+        "date": "2016-11-03T10:00:00+01:00",
+        "notes": [
+            "[Added] Added commands to manage tasks."
+        ]
+    },
+    {
         "version": "1.1.8",
         "downloadUrl": "https://github.com/am-impact/amcommand/archive/master.zip",
         "date": "2016-08-04T10:00:00+01:00",
