--- a/releases.json
+++ b/releases.json
@@ -1,44 +1,10 @@
 [
     {
-        "version": "1.2.0",
-        "downloadUrl": "https://github.com/am-impact/amcommand/archive/master.zip",
-        "date": "2016-11-03T10:00:00+01:00",
+        "version": "2.0.0",
+        "downloadUrl": "https://github.com/am-impact/amforms/archive/master.zip",
+        "date": "2017-04-03T10:00:00+01:00",
         "notes": [
-            "[Added] Added commands to manage tasks."
-        ]
-    },
-    {
-        "version": "1.1.8",
-        "downloadUrl": "https://github.com/am-impact/amcommand/archive/master.zip",
-        "date": "2016-08-04T10:00:00+01:00",
-        "notes": [
-            "[Added] New command under tools to restart failed tasks."
-        ]
-    },
-    {
-        "version": "1.1.7",
-        "downloadUrl": "https://github.com/am-impact/amcommand/archive/master.zip",
-        "date": "2016-05-02T10:00:00+01:00",
-        "notes": [
-            "[Added] Added functionality to set a return title through plugins.",
-            "[Fixed] Restoring to actions when pressing ESC in a sub command / action."
-        ]
-    },
-    {
-        "version": "1.1.6",
-        "downloadUrl": "https://github.com/am-impact/amcommand/archive/master.zip",
-        "date": "2016-04-19T10:00:00+01:00",
-        "notes": [
-            "[Added] Added functionality to set return commands through plugins."
-        ]
-    },
-    {
-        "version": "1.1.5",
-        "downloadUrl": "https://github.com/am-impact/amcommand/archive/master.zip",
-        "date": "2016-04-18T10:00:00+01:00",
-        "notes": [
-            "[Added] Added releases JSON.",
-            "[Added] Added plugin icons."
+            "[Improved] Craft 3 support."
         ]
     }
 ]
