--- a/releases.json
+++ b/releases.json
@@ -1,5 +1,13 @@
 [
     {
+        "version": "2.1.1",
+        "downloadUrl": "https://github.com/am-impact/amcommand/archive/master.zip",
+        "date": "2017-07-13T10:00:00+01:00",
+        "notes": [
+            "[Fixed] Duplicating an Entry has been fixed. Relation data that did not have an active status was not copied. Matrix blocks received the same locale as the primary locale, on multi locale environments."
+        ]
+    },
+    {
         "version": "2.1.0",
         "downloadUrl": "https://github.com/am-impact/amcommand/archive/master.zip",
         "date": "2017-06-22T10:00:00+01:00",
